--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.45.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "drizzle-orm": "^0.29.0",
     "pg": "^8.11.0",
-    "resend": "^2.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "resend": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/pg": "^8.10.9",
-    "@types/cors": "^2.8.17",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.0",
-    "esbuild": "^0.19.0",
-    "vite": "^5.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "drizzle-kit": "^0.20.0",
+    "drizzle-kit": "^0.31.8",
+    "esbuild": "^0.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0"
   }
 }
